# fullstack_LLM

./: .gitignore  Embedding_MeanPooling.py  docker-compose.yml  downloader.py  embedding_ada.py  embedding_st.py  faiss_first.py  hf_pipeline.py  intro.py  langchain_embedding.py  langchain_milvus.py  main.py  main.sh  milvus_first.py  models.py  models.sh  pg_vec.py  pinecone_first.py  pyproject.toml
milvus/: docker-compose.yml
