[tool.poetry]
name = "fullstack-llm"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel.famd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.49.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sentence-transformers = "^3.4.1"
openai = "^1.63.2"
configparser = "^7.1.0"
faiss-cpu = "^1.10.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
pinecone-client = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
