[tool.poetry]
name = "fullstack-llm"
version = "0.1.0"
description = ""
authors = ["Daniel <daniel.famd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.49.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sentence-transformers = "^3.4.1"
openai = "^1.63.2"
configparser = "^7.1.0"
faiss-cpu = "^1.10.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
pinecone-client = "^5.0.1"
pymilvus = "^2.5.4"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.6"
pypdf = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
